--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    width: 100%;
     margin: 0;
     font-family: 'Open Sans', sans-serif;
     background: #222;
